<resources>
    <string name="app_name">Kargobike App</string>
    <string name="s_manager">Manager</string>
    <string name="s_rider">Rider</string>
    <string name="s_dispatcher">Dispatcher</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="transportList">Transport List</string>
    <string name="add">Add</string>
    <string name="productList">Product List</string>
    <string name="clientList">Client List</string>
    <string name="photoScreen">Photo Screen</string>
    <string name="signScreen">Sign Screen</string>
    <string name="userList">User List</string>
    <string name="profile">Profile</string>
    <string name="productDetails">Product Details</string>
    <string name="userDetails">User Details</string>
    <string name="s_firstname">Firstname</string>
    <string name="s_lastname">Lastname</string>
    <string name="s_address">Address</string>
    <string name="s_city">City</string>
    <string name="s_postcode">Postcode</string>
    <string name="s_email">Mail Address</string>
    <string name="s_phone">Phone</string>
    <string name="s_transportList">Transport List</string>
    <string name="s_transportDetails">Transport Details</string>
    <string name="s_productList">Product List</string>
    <string name="s_clientList">Choose Client</string>
    <string name="s_photoScreen">Photo Screen</string>
    <string name="s_signScreen">Sign Screen</string>
    <string name="s_userList">User List</string>
    <string name="s_profile">Profile</string>
    <string name="s_productDetails">Product Details</string>
    <string name="s_userDetails">User Details</string>
    <string name="s_product">Product</string>
    <string name="s_quantity">Quantity</string>
    <string name="s_deliveryDate">Delivery Date</string>
    <string name="s_deliveryTime">Delivery Time</string>
    <string name="s_client">Client</string>
    <string name="s_pickupAddress">Pickup Address</string>
    <string name="s_deliveryAddress">Delivery Address</string>
    <string name="s_responsibleRider">Responsible Rider</string>
    <string name="s_status">Status</string>
    <string name="s_status_points">Status:&#160;</string>
    <string name="s_checkpoints">Checkpoints</string>
    <string name="s_MonthlyReport">Monthly Report</string>
    <string name="s_product_points">Product:&#160;</string>
    <string name="s_date_points">Date:&#160;</string>
    <string name="s_time_points">Time:&#160;</string>
    <string name="s_separator"> - </string>
    <string name="s_new">New</string>
    <string name="s_loaded">Loaded</string>
    <string name="s_pending">Pending</string>
    <string name="s_changeStatus">Change Status</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_location">Location</string>
    <string name="s_zone">Zone</string>
    <string name="s_zone_list">Zone List</string>
    <string name="action_cancel">Cancel</string>
    <string name="s_bikeConfirmation">Ready</string>
    <string name="s_bconfirmation">Ready to go ?</string>
    <string name="s_name">Name</string>
    <string name="s_description">Description</string>
    <string name="s_price">Price</string>
    <string name="s_rule1">1. Check the tyre pressure</string>
    <string name="s_rule2">2. Check the brakes</string>
    <string name="s_rule3">3. Check the chains</string>
    <string name="s_rule4">4. Check the frame and the fork</string>
    <string name="s_rule_check">Please follow these steps</string>

    <string name="s_duration">Duration</string>
    <string name="s_interurbain">Interurbain</string>
    <string name="s_type">Type</string>
    <string name="s_lat">Lat</string>
    <string name="s_lng">Lng</string>
    <string name="s_timeStamp">Timestamp</string>
    <string name="s_remark">remark</string>
    <string name="s_location_points">Location:&#160;</string>
    <string name="s_zone_points">Zone:&#160;</string>
    <string name="s_rider_points">Rider:&#160;</string>
    <string name="s_select_date">Select Date</string>
    <string name="s_export_data">Export Data</string>
    <string name="s_workingTime">Working Time</string>
    <string name="s_deliveries">Deliveries</string>
    <string name="s_From_points">Starting Date:</string>
    <string name="s_to_points">Ending Date:</string>
    <string name="s_user_name">Name:&#160;</string>
    <string name="s_user_phone">Phone:&#160;</string>
    <string name="s_user_email">E-Mail:&#160;</string>

    <string name="s_title_notification">New Order</string>
    <string name="s_body_notification">You have been chosen for a new delivery</string>


    <string name="s_productID_points">Product ID:&#160;</string>
    <string name="s_name_points">Name:&#160;</string>
    <string name="s_description_points">Description:&#160;</string>

    <string name="s_type_points">Type:&#160;</string>
    <string name="s_timeStamp_points">TimeStamp:&#160;</string>
    <string name="s_reamrk_points">Remark:&#160;</string>
    <string name="s_searchClient">Search Client</string>

    <string name="s_title">Title</string>
    <string name="s_company">Company</string>

    <string name="s_status_unload_popup">Where did you unload the package?</string>
    <string name="s_status_unload_checkpoint">Checkpoint</string>
    <string name="s_status_unload_trainstation">Train Station</string>
    <string name="s_status_unload_destination">Final Destination</string>
    <string name="s_back">Back</string>
    <string name="s_separator_dash">&#160;>>&#160;</string>
    <string name="s_kargobike_logo">Kargobike Logo</string>
    <string name="s_log_out">Log out</string>
    <string name="action_about">About</string>
    <string name="s_new_responsible">New Responsible</string>
    <string name="s_arrival_city">Arrival City</string>
    <string name="s_arrival_time">Arrival Time</string>

    <string name="s_arrival_time_missing">Error, please add arrival time</string>
    <string name="s_train_station_list">Train Station List</string>
    <string name="s_language">Language</string>
    <string name="s_workingSince">Workingsince</string>
    <string name="s_password">Password</string>
    <string name="s_function">Function</string>

    <string name="s_consent">Consent under the GDPR must be ‘freely given, specific, informed and unambiguous’. Consent from an employee will no longer be ‘freely given’ due to the unequal nature of the employer and employee relationship.</string>
    <string name="s_SAR">Subject Access Requests (SARs) are a familiar concept. We already have SARs under current data protection laws. They allow individuals to find out what personal data is being held by them, why the organisation is holding it and who their information is disclosed to by the organisation.</string>
    <string name="s_privacy">Under the GDPR, employers will need to provide more detailed information, such as:how long data will be stored for; <br/>
if data will be transferred to other countries;<br/>
information on the right to make a subject access request; <br/>
information on the right to have personal data deleted or rectified in certain instances.</string>
    <string name="s_breach">The GDPR requires employers to report any data breaches. If there is an accidental or unlawful loss of personal data, the employer will have to notify the ICO promptly unless there is a low risk of causing harm to their employees.</string>
    <string name="s_train_arrival">Train arrives at:&#160;</string>
    <string name="spinner_prompt">Mr</string>
</resources>
