<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="deploy.example.kargobikeappg4.ui.transport.TransportDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_change_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ButtonChangeStatus"
                    android:text="@string/s_changeStatus" />
            </LinearLayout>

            <TextView
                android:id="@+id/td_tv_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_product"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/td_tv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_quantity"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_quantity"
                android:inputType="number"
                android:importantForAutofill="no"
                />

            <TextView
                android:id="@+id/td_tv_dateDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_deliveryDate"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_deliveryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_deliveryDate"
                android:inputType="date"
                android:importantForAutofill="no" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TimePicker
                    android:id="@+id/td_timepicker_delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:visibility="visible"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/td_tv_deliveryTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/td_timepicker_delivery_time"
                    android:text="@string/s_deliveryTime"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/td_input_deliveryTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/td_tv_deliveryTime"
                    android:layout_toStartOf="@id/td_timepicker_delivery_time"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/s_deliveryTime"
                    android:importantForAutofill="no"
                    android:inputType="time" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button_ClientList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Transport_button_clientList"
                    android:text="@string/s_clientList" />
            </LinearLayout>

            <EditText
                android:id="@+id/td_input_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/s_client"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/td_tv_pickupAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s_pickupAddress"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_pickupAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_pickupAddress"
                android:inputType="text|textPostalAddress"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/td_tv_deliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_deliveryAddress"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_deliveryAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_deliveryAddress"
                android:inputType="text|textPostalAddress"
                android:selectAllOnFocus="true"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/td_tv_responsibleRider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_responsibleRider"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerRiders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/td_tv_checkpoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_checkpoints"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_storage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-3dp"
                android:layout_marginLeft="-3dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:scrollbars="vertical"
                tools:listitem="@layout/transport_item"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/td_tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_status_points"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/td_input_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/s_new" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_PhotoScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Transport_button_photoScreen"
                    android:text="@string/s_photoScreen" />

                <Button
                    android:id="@+id/button_SignScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Transport_button_signScreen"
                    android:text="@string/s_signScreen" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/td_button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Transport_button_cancel"
                    android:text="@string/s_cancel" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>