<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nav.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ul_button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Welcome_button_profile"
            android:text="@string/s_profile" />

        <Button
        android:id="@+id/button_transportList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Welcome_button_transportList"
        android:text="@string/s_transportList" />

        <Button
            android:id="@+id/button_ProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Welcome_button_productList"
            android:text="@string/s_productList" />

        <Button
            android:id="@+id/button_UserList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Welcome_button_userList"
            android:text="@string/s_userList" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>