<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="deploy.example.kargobikeappg4.ui.user.UserDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/td_tv_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_function"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/spinnerFunctions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/td_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_name"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/td_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_email"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_email"
                android:inputType="text" />

            <TextView
                android:id="@+id/td_tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_password"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_pasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_password"
                android:inputType="text" />

            <TextView
                android:id="@+id/td_tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_address"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_address"
                android:inputType="text" />

            <TextView
                android:id="@+id/td_tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_language"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_language"
                android:inputType="text" />

            <TextView
                android:id="@+id/td_tv_workingsince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_workingSince"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_workingsince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_workingSince"
                android:inputType="date"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/td_tv_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_phone"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/td_input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/s_phone"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/td_button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="User_button_delete"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>